package com.controlacceso.accescontrol.repository;

import com.controlacceso.accescontrol.entity.Tarjeta;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

import java.util.List;
import java.util.Optional;

@Repository
public interface TarjetaRepository extends JpaRepository<Tarjeta, Integer> {
    Optional<Tarjeta> findByUid(String uid);
    List<Tarjeta> findByEmpleadoId(Integer empleadoId);
}
